--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -9,9 +9,12 @@ trigger:
 pool:
   vmImage: windows-latest
 
+- task: PowerShell@2
+  inputs:
+      filePath: "$(System.DefaultWorkingDirectory)\install.ps1"
+
 steps:
-- pwsh: |
-    ./install.ps1
+- powershell: |
     gh-sync pull-gh microsoft/iqsharp 567 --dry-run
-  displayName: 'Install and run script'
+  displayName: 'Run script'
   workingDirectory: '$(System.DefaultWorkingDirectory)'
