--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -12,8 +12,8 @@ pool:
 steps:
 - task: PowerShell@2
   inputs:
-      filePath: "$(System.DefaultWorkingDirectory)\install.ps1"
-      
+      filePath: "$(System.DefaultWorkingDirectory)/install.ps1"
+
 - powershell: |
     gh-sync pull-gh microsoft/iqsharp 567 --dry-run
   displayName: 'Run script'
