--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -12,9 +12,10 @@ pool:
 steps:
 - task: PowerShell@2
   inputs:
-      filePath: "$(System.DefaultWorkingDirectory)/install.ps1"
+    targetType: 'filePath'
+    filePath: "$(System.DefaultWorkingDirectory)\install.ps1"
 
-- powershell: |
-    gh-sync pull-gh microsoft/iqsharp 567 --dry-run
-  displayName: 'Run script'
-  workingDirectory: '$(System.DefaultWorkingDirectory)'
+# - powershell: |
+#     gh-sync pull-gh microsoft/iqsharp 567 --dry-run
+#   displayName: 'Run script'
+#   workingDirectory: '$(System.DefaultWorkingDirectory)'
