--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -13,7 +13,7 @@ steps:
 - task: PowerShell@2
   inputs:
     targetType: 'filePath'
-    filePath: "$(System.DefaultWorkingDirectory)\install.ps1"
+    filePath: "$(System.DefaultWorkingDirectory)/install.ps1"
 
 # - powershell: |
 #     gh-sync pull-gh microsoft/iqsharp 567 --dry-run
