Update gh-sync.yml for Azure Pipelines

--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -9,11 +9,10 @@ trigger:
 pool:
   vmImage: windows-latest
 
-
+steps:
 - task: PowerShell@2
   inputs:
-    targetType: 'filePath'
-    filePath: "$(System.DefaultWorkingDirectory)/install.ps1"
+    filePath: './install.ps1'
 
 # - powershell: |
 #     gh-sync pull-gh microsoft/iqsharp 567 --dry-run
