--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -10,6 +10,14 @@ pool:
   vmImage: windows-latest
 
 steps:
+
+- task: UseDotNet@2
+  displayName: 'Use .NET Core sdk'
+  inputs:
+    packageType: sdk
+    version: 3.1.402
+    installationPath: $(Agent.ToolsDirectory)/dotnet
+    
 - task: PowerShell@2
   inputs:
     filePath: './install.ps1'
