--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -27,4 +27,4 @@ steps:
   displayName: 'Run gh-sync'
   inputs:
     targetType: 'inline'
-    script: 'gh-sync pull-gh microsoft/iqsharp 567 --dry-run'
+    script: 'dotnet run --project .\gh-sync.csproj gh-sync pull-gh microsoft/iqsharp 567 --dry-run'
