--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -24,7 +24,13 @@ steps:
     filePath: './install.ps1'
 
 - task: PowerShell@2
+  displayName: 'Build project'
+  inputs:
+    targetType: 'inline'
+    script: 'dotnet build'
+
+- task: PowerShell@2
   displayName: 'Run gh-sync'
   inputs:
     targetType: 'inline'
-    script: 'dotnet run --project .\gh-sync.csproj gh-sync pull-gh microsoft/iqsharp 567 --dry-run'
+    script: 'dotnet run gh-sync pull-gh microsoft/iqsharp 567 --dry-run'
