--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -29,3 +29,6 @@ steps:
       ./install.ps1
       Write-Host "##### Running gh-sync #####"
       gh-sync pull-gh microsoft/iqsharp 567 --dry-run
+  env:
+    ADO_TOKEN: $(ADO_TOKEN)
+    GITHUB_TOKEN: $(GITHUB_TOKEN)
