Use repoName in call to gh-sync

--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -24,7 +24,7 @@ steps:
     script: |
       Write-Host "Test value: $(repoName)"
       ./install.ps1
-      gh-sync pull-all-gh microsoft/quantumkatas --dry-run
+      gh-sync pull-all-gh microsoft/$(repoName) --dry-run
   env:
     ADO_TOKEN: $(ADO_TOKEN)
     GITHUB_TOKEN: $(GITHUB_TOKEN)
