--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -1,3 +1,10 @@
+schedules:
+- cron: "0 9-17 * * MON-FRI"
+  displayName: Hourly Sync
+  branches:
+    include:
+    - main
+
 trigger:
 - main
 
@@ -17,9 +24,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      Write-Host "Test value: $(repoName)"
       ./install.ps1
-      gh-sync pull-all-gh microsoft/$(repoName) --dry-run
+      gh-sync pull-all-gh microsoft/QuantumKatas --dry-run
   env:
     ADO_TOKEN: $(ADO_TOKEN)
     GITHUB_TOKEN: $(GITHUB_TOKEN)
