--- a/gh-sync.yml
+++ b/gh-sync.yml
@@ -11,6 +11,13 @@ steps:
     packageType: sdk
     version: 6.0.101
     installationPath: $(Agent.ToolsDirectory)/dotnet
+
+- task: AzureKeyVault@1
+  inputs:
+    azureSubscription: 'AzureRM / Solid'
+    KeyVaultName: 'kv-qdk-build'
+    SecretsFilter: 'GitHubPAT'
+    RunAsPreJob: false
     
 - task: PowerShell@2
   displayName: 'Install and Run'
@@ -21,4 +28,4 @@ steps:
       gh-sync pull-all-gh microsoft/$(repoName) --dry-run
   env:
     ADO_TOKEN: $(ADO_TOKEN)
-    GITHUB_TOKEN: $(GITHUB_TOKEN)
+    GITHUB_TOKEN: $(GitHubPAT)
