--- a/gh-sync.csproj
+++ b/gh-sync.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <RootNamespace>gh_sync</RootNamespace>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -19,30 +19,3 @@
   </ItemGroup>
 
 </Project>
-<!-- 
-
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net452</TargetFramework>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <RootNamespace>ClientLibraryConsoleAppSample</RootNamespace>
-    <AssemblyName>ClientLibraryConsoleAppSample</AssemblyName>	
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.4"  Condition="'$(TargetFramework)' == 'netcoreapp2.0'" />
-    <PackageReference Include="Microsoft.TeamFoundationServer.ExtendedClient" Version="16.139.0-preview" />
-    <PackageReference Include="System.Net.Http" Version="4.3.3" Condition="'$(TargetFramework)' == 'netcoreapp2.0'" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.1" Condition="'$(TargetFramework)' == 'netcoreapp2.0'" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Net" />
-    <Reference Include="System.Net.Http" Condition="'$(TargetFramework)' == 'net452'" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" Condition="'$(TargetFramework)' == 'net452'" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-</Project> -->
