--- a/gh-sync.csproj
+++ b/gh-sync.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>gh_sync</RootNamespace>
     <Nullable>enable</Nullable>
   </PropertyGroup>
