add null exception test for ADO issue pulling

--- a/test/GhSyncTests/GhSyncTests.csproj
+++ b/test/GhSyncTests/GhSyncTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GhSync\GhSync.csproj" />
+    <ProjectReference Include="..\..\src\GhSync\GhSync.csproj" />
   </ItemGroup>
 
 </Project>
